SAGA 패턴 - 결제 실패 테스트 중 오류 수정